ch01 - Upgrade gradle, Change SDK